more problems on recursion